<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StationOwnerRegistration"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ownernew">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">
            <TextView
                android:id="@+id/fuelStationRegLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stationOwnerRegistration"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/navy_clue"
                />
            <EditText
                android:id="@+id/ownerNameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="14sp"

                />
            <EditText
                android:id="@+id/ownerPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/ownerEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/ownerPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/loginPassword"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/stationName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_local_gas_station_24"
                android:drawablePadding="8dp"
                android:hint="@string/stationName"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/stationId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_123_24"
                android:drawablePadding="8dp"
                android:hint="@string/stationID"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="14sp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/ownerRegBtn"
                android:text="@string/registerBtn"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/navy_clue"
                app:cornerRadius = "20dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>